--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "beexy-ui",
   "private": false,
-  "version": "0.1.0",
+  "version": "0.2.3",
   "description": "A Custom React Component Library",
   "type": "module",
   "main": "dist/beexy-ui.umd.js",
   "module": "dist/beexy-ui.es.js",
   "types": "dist/types/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist",
+    "dist/style.css"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc --project tsconfig.lib.json && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "publish": "npm run build && npm publish",
+    "publish:public": "npm run build && npm publish",
     "publish:private": "npm run build && npm publish --registry http://localhost:4875"
   },
   "peerDependencies": {
@@ -35,8 +38,12 @@
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   },
-  "keywords": ["react", "component", "library"],
-  "author": "Jesus Risquez",
+  "keywords": [
+    "react",
+    "component",
+    "library"
+  ],
+  "author": "Jesus C Risquez",
   "license": "MIT",
   "repository": {
     "type": "git",
